# rx_fitter

./: .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini
src/rx_fitter/: components.py  constraint_reader.py  inclusive_decays_weights.py  inclusive_sample_weights.py  mc_par_pdf.py  models.py  pchain.py  pdg_utils.py  prec.py  prec_scales.py  signal_scales.py
src/rx_fitter_data/combinatorial/: cmb_prc.yaml  inv_cmb_prc.yaml  low_cmb_mix_mva.yaml  mix_mva.yaml  q2_kind_vs_mva.yaml  validation.yaml  window_cmb_prc.yaml
src/rx_fitter_data/config/: dtf.yaml  no_dtf.yaml  no_dtf_corrected.yaml  no_dtf_original.yaml  v1.yaml
src/rx_fitter_data/model_tester/: reso_ee.yaml
src/rx_fitter_data/model_tester/v2/: reso_ee.yaml
src/rx_fitter_data/model_tester/v3/: reso_ee.yaml
src/rx_fitter_data/names/: models.yaml
src/rx_fitter_data/rare_fit/: README.md
src/rx_fitter_data/rare_fit/model_tester/: reso_ee.yaml
src/rx_fitter_data/tests/: bxhsee.yaml  bxhsee_first.yaml  combinatorial.yaml  components.yaml  mc.yaml
src/rx_fitter_data/tests/components/: combinatorial.yaml  mc.yaml  mc_create.yaml  mc_reparametrize.yaml  (+3 more)
src/rx_fitter_scripts/: fit.py  make_yield_tables.py  model_tester.py  reso_scale.py  rx_data_no_tail.py  rx_fit.py  rx_fit_ee.py  rx_rare_ee.py  rx_reso_ee.py  rx_reso_mm.py  tabulate_pdfs.py  validate_cmb.py  yield_tables.py
tests/: conftest.py  test_components.py  test_constraint_reader.py  test_inclusive_decays_weights.py  test_inclusive_sample_weights.py  test_mc_par_pdf.py  test_prec.py  test_prec_scales.py  test_signal_scales.py
(+20 files in other folders)
