[project]
name        = 'rx_fitter'
version     = '0.0.1'
readme      = 'README.md'
dependencies= [
'rx_data',
'data-manipulation-utilities',
]

[project.optional-dependencies]
dev  = ['pytest']

[tools.setuptools.packages.find]
where   = ['src']

[project.scripts]
compare_root_files='rx_fitter_scripts.fit:main'

[tool.setuptools.package-data]

[tool.setuptools]
