[project]
name        = 'rx_fitter'
version     = '0.0.1'
readme      = 'README.md'
dependencies= [
'rx_data',
'data-manipulation-utilities',
'rx_calibration',
]

[project.optional-dependencies]
dev  = ['pytest']

[tools.setuptools.packages.find]
where   = ['src']

[project.scripts]
rx_fit='rx_fitter_scripts.rx_fit:main'

[tool.setuptools.package-data]

[tool.setuptools]
