[project]
name        = 'rx_fitter'
version     = '0.0.1'
readme      = 'README.md'
dependencies= [
'rx_data',
'asdf',
'pdg',
'data-manipulation-utilities',
'rx_calibration',
]

[project.optional-dependencies]
dev  = ['pytest']

[tools.setuptools.packages.find]
where   = ['src']

[project.scripts]
rx_data_no_tail='rx_fitter_scripts.rx_data_no_tail:main'
model_tester='rx_fitter_scripts.model_tester:main'
rx_fit_mm='rx_fitter_scripts.rx_fit_mm:main'
rx_fit_ee='rx_fitter_scripts.rx_fit_ee:main'
rx_reso_ee='rx_fitter_scripts.rx_reso_ee:main'

[tool.setuptools.package-data]
rx_fitter_data=['*/*/*/*/*/*.json']

[tool.setuptools]
